--- a/App/src/styles/login.css
+++ b/App/src/styles/login.css
@@ -59,7 +59,7 @@ input {
 .login-btn {
     width: 80%;
     padding: 10px;
-    background-color: #5b21b6;
+    background-color: #4a5fd5;
     color: white;
     border: none;
     border-radius: 5px;
@@ -70,7 +70,7 @@ input {
 }
 
 .login-btn:hover {
-    background-color: #4c1d95;
+    background-color: #1d2b7a;
 }
 
 .error {
@@ -86,7 +86,7 @@ input {
 }
 
 .signup-link {
-    color: #5b21b6; 
+    color: #1d2b7a; 
     font-weight: bold;
     text-decoration: none; 
     cursor: pointer;
@@ -94,7 +94,7 @@ input {
 
 .signup-link:hover {
     text-decoration: underline;
-    color: #4c1d95;
+    color: #4a5fd5;
 }
 
 /* Right Section (Image) */
