--- a/App/src/styles/signup.css
+++ b/App/src/styles/signup.css
@@ -58,7 +58,7 @@ input {
 .signup-btn {
     width: 80%;
     padding: 10px;
-    background-color: #5b21b6;
+    background-color: #4a5fd5;
     color: white;
     border: none;
     border-radius: 5px;
@@ -69,7 +69,7 @@ input {
 }
 
 .signup-btn:hover {
-    background-color: #4c1d95;
+    background-color: #1d2b7a;
 }
 
 .error {
@@ -87,15 +87,21 @@ input {
 }
 
 .login-link {
-    color: #5b21b6; 
+    color: #1d2b7a; 
     font-weight: bold;
     text-decoration: none; 
     cursor: pointer;
+    background: none;
+    border: none;
+    text-decoration: underline;
+    cursor: pointer;
+    font-size: inherit;
+    padding: 0;
 }
 
 .login-link:hover {
     text-decoration: underline;
-    color: #4c1d95;
+    color: #4a5fd5;
 }
 
 
