--- a/App/src/styles/style.css
+++ b/App/src/styles/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: #f5f7fb;
+}
+
 .hero-section {
     display: flex;
     align-items: center;
