--- a/App/src/styles/dashboard.css
+++ b/App/src/styles/dashboard.css
@@ -31,6 +31,7 @@
 .posting-header h2 {
     margin: 0;
     font-size: 1.5rem;
+    color: white;
 }
 
 .add-icons {
@@ -43,6 +44,7 @@
     color: #4a5fd5;
     padding: 10px 15px;
     border-radius: 5px;
+    font-size: 13px;
     cursor: pointer;
     font-weight: bold;
     transition: background-color 0.3s ease, color 0.3s ease;
